TODO
* TODO: libfvalue_value_write_to_file_stream
* update smraw.net bindings
* why is empty information value section written in info file

* complete libfvalue and test information file read/write
* configure validate libuna and libbfio check
* close segment file handle on writing when full?
* check if information file is handled correctly on close/free

Features
* allow set of segment filename during write (as alternative writing locations)
* add read and write random functions
* implement write resume
* glob of .1ofN for PREFIX (without the initial extension to help the glob function)

Tooling
* detect maximum possible segment size on file system (e.g. FAT)

smraw.net
* implement other functions ?
* in examples print exception/backtrace on error

Test
* retrieve data from the information file on open
* make sure certain values cannot be changed if writing/reading from raw files
* add glob test to msvscpp project

Beta release
* remove deprecated functions in libsmraw_legacy.[ch]

20120701
* applied updates

20120630
* applied updates

20120519
* applied updates
* disabled borland codegear files
* added smrawmount destroy

20120212
* small changes

20120209
* added dpkg files
* updated libnotify, libbfio, libfvalue

20120102
* 2012 update

20111231
* updated libhmac
* updated msvscpp and codegear files

20111229
* updated libcstring, libuna, libbfio

20111224
* update libcstring, libsystem, libuna, libfvalue, libhmac
* updated pc file

20111113
* updated libcstring, libsystem, libuna, libbfio, libbfio, libfvalue, libhmac
* made smrawmount a bit more flexible for filenames not supported by glob function

20111030
* updated configure.as and m4 files
* updated libhmac
* added glob support for .img and .dmg
* code clean up in glob function

20111020
* updated README.static
* updated libfvalues

20111013
* fixes for libfuse detection
* added support for OSXFuse
* fix for static executables on Cygwin
* updated libfvalue

20111009
* small changes to smrawmount
