@@ -65,6 +65,9 @@ AX_LIBCLOCALE_CHECK_ENABLE
 dnl Check for enabling libcnotify for cross-platform C notification functions
 AX_LIBCNOTIFY_CHECK_ENABLE
 
+dnl Check for enabling libcsplit for cross-platform C split string functions
+AX_LIBCSPLIT_CHECK_ENABLE
+
 dnl Check for enabling libuna for Unicode string support
 AX_LIBUNA_CHECK_ENABLE
 
@@ -143,7 +146,7 @@ AM_CONDITIONAL(
 
 dnl Check if requires and build requires should be set in spec file
 AS_IF(
- [test "x$ac_cv_libcstring" = xyes || test "x$ac_cv_libcerror" = xyes || test "x$ac_cv_libclocale" = xyes || test "x$ac_cv_libcnotify" = xyes || test "x$ac_cv_libuna" = xyes || test "x$ac_cv_libcfile" = xyes || test "x$ac_cv_libcpath" = xyes || test "x$ac_cv_libbfio" = xyes || test "x$ac_cv_libfvalue" = xyes || test "x$ac_cv_libmfcache" = xyes || test "x$ac_cv_libmfdata" = xyes],
+ [test "x$ac_cv_libcstring" = xyes || test "x$ac_cv_libcerror" = xyes || test "x$ac_cv_libclocale" = xyes || test "x$ac_cv_libcnotify" = xyes || test "x$ac_cv_libcsplit" = xyes ||  test "x$ac_cv_libuna" = xyes || test "x$ac_cv_libcfile" = xyes || test "x$ac_cv_libcpath" = xyes || test "x$ac_cv_libbfio" = xyes || test "x$ac_cv_libfvalue" = xyes || test "x$ac_cv_libmfcache" = xyes || test "x$ac_cv_libmfdata" = xyes],
  [AC_SUBST(
   [libsmraw_spec_requires],
   [Requires:])
@@ -172,6 +175,7 @@ AC_CONFIG_FILES([libcstring/Makefile])
 AC_CONFIG_FILES([libcerror/Makefile])
 AC_CONFIG_FILES([libclocale/Makefile])
 AC_CONFIG_FILES([libcnotify/Makefile])
+AC_CONFIG_FILES([libcsplit/Makefile])
 AC_CONFIG_FILES([libuna/Makefile])
 AC_CONFIG_FILES([libcfile/Makefile])
 AC_CONFIG_FILES([libcpath/Makefile])
@@ -213,8 +217,10 @@ AC_MSG_NOTICE([
 Building:
    libcstring support:                         $ac_cv_libcstring
    libcerror support:                          $ac_cv_libcerror
-   libuna support:                             $ac_cv_libuna
    libclocale support:                         $ac_cv_libclocale
+   libcnotify support:                         $ac_cv_libcnotify
+   libcsplit support:                          $ac_cv_libcsplit
+   libuna support:                             $ac_cv_libuna
    libcfile support:                           $ac_cv_libcfile
    libcpath support:                           $ac_cv_libcpath
    libbfio support:                            $ac_cv_libbfio
